--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-plotly
-gnews
-nltk
-# Optional (add to enable TextBlob sentiment)
-textblob
+streamlit>=1.24
+pandas>=1.5
+plotly>=5.8
+gnews>=0.3
+nltk>=3.7
+requests>=2.28
+python-dateutil>=2.8.2
